parser/y.output

state 0
	$accept: .top $end 

	kLPAREN  shift 6
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	.  error

	proc  goto 2
	simpleproc  goto 3
	top  goto 1

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  proc.    (1)
	proc:  proc.kPAR simpleproc 

	kPAR  shift 8
	.  reduce 1 (src line 29)


state 3
	proc:  simpleproc.    (2)

	.  reduce 2 (src line 32)


state 4
	simpleproc:  kNIL.    (4)

	.  reduce 4 (src line 36)


state 5
	simpleproc:  kNAME.kLANGLE values kRANGLE 
	simpleproc:  kNAME.kLPAREN names kRPAREN kPREFIX proc 
	simpleproc:  kNAME.kLPAREN names kRPAREN kPREFIX kLPAREN proc kRPAREN 

	kLANGLE  shift 9
	kLPAREN  shift 10
	.  error


state 6
	simpleproc:  kLPAREN.kNEW scopename kRPAREN scope 
	simpleproc:  kLPAREN.kNEW scopename kCOMMA names kRPAREN scope 

	kNEW  shift 11
	.  error


state 7
	simpleproc:  kREPEAT.proc 
	simpleproc:  kREPEAT.kLPAREN proc kRPAREN 

	kLPAREN  shift 13
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	.  error

	proc  goto 12
	simpleproc  goto 3

state 8
	proc:  proc kPAR.simpleproc 

	kLPAREN  shift 6
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	.  error

	simpleproc  goto 14

state 9
	simpleproc:  kNAME kLANGLE.values kRANGLE 
	values: .    (19)

	kNAME  shift 16
	.  reduce 19 (src line 59)

	values  goto 15

state 10
	simpleproc:  kNAME kLPAREN.names kRPAREN kPREFIX proc 
	simpleproc:  kNAME kLPAREN.names kRPAREN kPREFIX kLPAREN proc kRPAREN 
	names: .    (16)

	kNAME  shift 19
	.  reduce 16 (src line 54)

	scopename  goto 18
	names  goto 17

state 11
	simpleproc:  kLPAREN kNEW.scopename kRPAREN scope 
	simpleproc:  kLPAREN kNEW.scopename kCOMMA names kRPAREN scope 

	kNAME  shift 19
	.  error

	scopename  goto 20

state 12
	proc:  proc.kPAR simpleproc 
	simpleproc:  kREPEAT proc.    (10)

	.  reduce 10 (src line 42)


state 13
	simpleproc:  kLPAREN.kNEW scopename kRPAREN scope 
	simpleproc:  kLPAREN.kNEW scopename kCOMMA names kRPAREN scope 
	simpleproc:  kREPEAT kLPAREN.proc kRPAREN 

	kLPAREN  shift 6
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	kNEW  shift 11
	.  error

	proc  goto 21
	simpleproc  goto 3

state 14
	proc:  proc kPAR simpleproc.    (3)

	.  reduce 3 (src line 33)


state 15
	simpleproc:  kNAME kLANGLE values.kRANGLE 
	values:  values.kCOMMA kNAME 

	kRANGLE  shift 22
	kCOMMA  shift 23
	.  error


state 16
	values:  kNAME.    (20)

	.  reduce 20 (src line 60)


state 17
	simpleproc:  kNAME kLPAREN names.kRPAREN kPREFIX proc 
	simpleproc:  kNAME kLPAREN names.kRPAREN kPREFIX kLPAREN proc kRPAREN 
	names:  names.kCOMMA scopename 

	kRPAREN  shift 24
	kCOMMA  shift 25
	.  error


state 18
	names:  scopename.    (17)

	.  reduce 17 (src line 55)


state 19
	scopename:  kNAME.    (12)
	scopename:  kNAME.kCOLON kNAME 

	kCOLON  shift 26
	.  reduce 12 (src line 46)


state 20
	simpleproc:  kLPAREN kNEW scopename.kRPAREN scope 
	simpleproc:  kLPAREN kNEW scopename.kCOMMA names kRPAREN scope 

	kRPAREN  shift 27
	kCOMMA  shift 28
	.  error


state 21
	proc:  proc.kPAR simpleproc 
	simpleproc:  kREPEAT kLPAREN proc.kRPAREN 

	kRPAREN  shift 29
	kPAR  shift 8
	.  error


state 22
	simpleproc:  kNAME kLANGLE values kRANGLE.    (5)

	.  reduce 5 (src line 37)


state 23
	values:  values kCOMMA.kNAME 

	kNAME  shift 30
	.  error


state 24
	simpleproc:  kNAME kLPAREN names kRPAREN.kPREFIX proc 
	simpleproc:  kNAME kLPAREN names kRPAREN.kPREFIX kLPAREN proc kRPAREN 

	kPREFIX  shift 31
	.  error


state 25
	names:  names kCOMMA.scopename 

	kNAME  shift 19
	.  error

	scopename  goto 32

state 26
	scopename:  kNAME kCOLON.kNAME 

	kNAME  shift 33
	.  error


state 27
	simpleproc:  kLPAREN kNEW scopename kRPAREN.scope 

	kLPAREN  shift 36
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	.  error

	simpleproc  goto 35
	scope  goto 34

state 28
	simpleproc:  kLPAREN kNEW scopename kCOMMA.names kRPAREN scope 
	names: .    (16)

	kNAME  shift 19
	.  reduce 16 (src line 54)

	scopename  goto 18
	names  goto 37

state 29
	simpleproc:  kREPEAT kLPAREN proc kRPAREN.    (11)

	.  reduce 11 (src line 43)


state 30
	values:  values kCOMMA kNAME.    (21)

	.  reduce 21 (src line 61)


state 31
	simpleproc:  kNAME kLPAREN names kRPAREN kPREFIX.proc 
	simpleproc:  kNAME kLPAREN names kRPAREN kPREFIX.kLPAREN proc kRPAREN 

	kLPAREN  shift 39
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	.  error

	proc  goto 38
	simpleproc  goto 3

state 32
	names:  names kCOMMA scopename.    (18)

	.  reduce 18 (src line 56)


state 33
	scopename:  kNAME kCOLON kNAME.    (13)

	.  reduce 13 (src line 47)


state 34
	simpleproc:  kLPAREN kNEW scopename kRPAREN scope.    (8)

	.  reduce 8 (src line 40)


state 35
	scope:  simpleproc.    (14)

	.  reduce 14 (src line 50)


state 36
	simpleproc:  kLPAREN.kNEW scopename kRPAREN scope 
	simpleproc:  kLPAREN.kNEW scopename kCOMMA names kRPAREN scope 
	scope:  kLPAREN.proc kRPAREN 

	kLPAREN  shift 6
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	kNEW  shift 11
	.  error

	proc  goto 40
	simpleproc  goto 3

state 37
	simpleproc:  kLPAREN kNEW scopename kCOMMA names.kRPAREN scope 
	names:  names.kCOMMA scopename 

	kRPAREN  shift 41
	kCOMMA  shift 25
	.  error


state 38
	proc:  proc.kPAR simpleproc 
	simpleproc:  kNAME kLPAREN names kRPAREN kPREFIX proc.    (6)

	.  reduce 6 (src line 38)


state 39
	simpleproc:  kNAME kLPAREN names kRPAREN kPREFIX kLPAREN.proc kRPAREN 
	simpleproc:  kLPAREN.kNEW scopename kRPAREN scope 
	simpleproc:  kLPAREN.kNEW scopename kCOMMA names kRPAREN scope 

	kLPAREN  shift 6
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	kNEW  shift 11
	.  error

	proc  goto 42
	simpleproc  goto 3

state 40
	proc:  proc.kPAR simpleproc 
	scope:  kLPAREN proc.kRPAREN 

	kRPAREN  shift 43
	kPAR  shift 8
	.  error


state 41
	simpleproc:  kLPAREN kNEW scopename kCOMMA names kRPAREN.scope 

	kLPAREN  shift 36
	kNIL  shift 4
	kNAME  shift 5
	kREPEAT  shift 7
	.  error

	simpleproc  goto 35
	scope  goto 44

state 42
	proc:  proc.kPAR simpleproc 
	simpleproc:  kNAME kLPAREN names kRPAREN kPREFIX kLPAREN proc.kRPAREN 

	kRPAREN  shift 45
	kPAR  shift 8
	.  error


state 43
	scope:  kLPAREN proc kRPAREN.    (15)

	.  reduce 15 (src line 51)


state 44
	simpleproc:  kLPAREN kNEW scopename kCOMMA names kRPAREN scope.    (9)

	.  reduce 9 (src line 41)


state 45
	simpleproc:  kNAME kLPAREN names kRPAREN kPREFIX kLPAREN proc kRPAREN.    (7)

	.  reduce 7 (src line 39)


17 terminals, 8 nonterminals
22 grammar rules, 46/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 24/240000
34 extra closures
66 shift entries, 1 exceptions
19 goto entries
6 entries saved by goto default
Optimizer space used: output 66/240000
66 table entries, 2 zero
maximum spread: 16, maximum offset: 41
